<resources>
    <string name="app_name">Wallpaper</string>
    <string name="filter">过滤</string>
    <string name="wallpaper_type">壁纸分类</string>
    <string name="wallpaper_size">壁纸尺寸</string>
    <string name="wallpaper_color">壁纸颜色</string>
    <string name="wallpaper_more">更多</string>
    <string name="wallpaper_pack">收起</string>
    <string name="transition_image_name">transition_image</string>
    <string name="header_behavior">com.magicalrice.adolph.wallpaper.widget.ToolBarViewBehavior</string>
    <string name="browse">浏览</string>
    <string name="download">下载</string>
    <string name="collect">收藏</string>
    <string name="lock_screen_browser">锁屏浏览</string>
    <string name="main_screen_browser">主屏浏览</string>
    <string name="cancel">取消</string>
    <string name="my_download">我的下载</string>
    <string name="my_collection">我的收藏</string>
    <string name="delete">删除</string>
    <string name="set_wallpaper_desc">设置为壁纸</string>
</resources>
