<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.magicalrice.adolph.wallpaper.view.viewer.WallpaperViewerViewModel"/>
        <variable
            name="listener"
            type="com.magicalrice.adolph.wallpaper.view.viewer.WallpaperViewerListener"/>
        <variable
            name="isDownload"
            type="boolean" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray2">
        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/img_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:layout_centerInParent="true"
            android:onClick="@{v -> listener.showWallpaper()}"/>

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/red"
            android:layout_alignParentBottom="true"
            android:text="@string/delete"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/white1"
            android:visibility="@{isDownload ? View.VISIBLE : View.GONE}"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/black5"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:visibility="@{isDownload ? View.GONE : View.VISIBLE}">
            <TextView
                android:id="@+id/img_browse"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:drawablePadding="2dp"
                android:layout_weight="1"
                android:textColor="@color/white1"
                android:textSize="12sp"
                android:text="@string/browse"
                android:gravity="center"
                android:paddingTop="5dp"
                android:onClick="@{v -> listener.onBrowser()}"
                android:drawableTop="@drawable/ic_browse"/>

            <TextView
                android:id="@+id/img_download"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="2dp"
                android:textColor="@color/white1"
                android:textSize="12sp"
                android:gravity="center"
                android:paddingTop="5dp"
                android:onClick="@{v -> listener.onDownload()}"
                android:drawableTop="@drawable/ic_download"
                android:text="@string/download"/>

            <TextView
                android:id="@+id/img_collect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/selector_collect"
                android:drawablePadding="2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="@{v -> listener.onCollect()}"
                android:paddingTop="5dp"
                android:textColor="@color/white1"
                android:textSize="12sp"
                android:text="@string/collect"/>
        </LinearLayout>
    </RelativeLayout>
</layout>